solc_mutator_ossfuzz_seed_corpus/test_sol/test_5fab46241d3e59bb895dd9411c885f9580dc257c546c41c427a28bca68bbe025_0544389eaa00702746d0337883c988a30c56a4d1_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  fallback() external virtual  
  {
  }
  mapping(bool => int32)  public s0;
  int192   s1;
  int112 immutable public s2;
  constructor(int192 i0,int112 i1)   {
    s1 *= (true ? ((((int192(3138550867693340381917894711603833208051177722232017256447) & int192(0)) & int192(2673885014514741602335369757475831017121456124811252323955)) ^ int192(3138550867693340381917894711603833208051177722232017256447)) ^ int192(0)) : int192(2617601628368199451980622425851552659775129548570881270141));
    s2 = int112(2596148429267413814265248164610047);
    s0[true] %= (int32(2147483647) - ((((false ? false : true) ? int32(-2018109784) : int32(-1417836111)) | int32(2147483647)) + int32(0)));
    {
      for(      (int152(2854495385411919762116571938898990272765493247) * int152((int152(0) / int152(0))));
;
((((uint248(((uint248(0) << uint64(uint64(0))) / uint248(0))) - uint248(452312848583266388373324160190187140051835877600158453279131187530910662655)) + uint248(452312848583266388373324160190187140051835877600158453279131187530910662655)) >> uint176(uint176(0))) ** uint256(uint256(0))))
      {
      }
      s1 += (((i0 ** uint144(uint48(106314798304232))) | int192(246072965749788000412945610107792885370559090097246991493)) * int192(3138550867693340381917894711603833208051177722232017256447));
      (bool l0, bytes memory l1) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"));
      (bool l2, bytes memory l3) = address(this).call(((true == false) ? bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff") : bytes("72fb489b13fb95cb105d7190b80ac58fc39e6f9471118b12c014abe6b6c69ac27752041a482c2bc5")));
    }
  }
}
// ----
// Warning 3149: (su0.sol:838-1121): The result type of the exponentiation operation is equal to the type of the first operand (uint248) ignoring the (larger) type of the second operand (uint256) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 6133: (su0.sol:743-833): Statement has no effect.
// Warning 6133: (su0.sol:837-1122): Statement has no effect.
// Warning 5667: (su0.sol:186-195): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:1342-1349): Unused local variable.
// Warning 2072: (su0.sol:1351-1366): Unused local variable.
// Warning 2072: (su0.sol:1468-1475): Unused local variable.
// Warning 2072: (su0.sol:1477-1492): Unused local variable.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
